--- a/Utils.Net/Controls/Styles/TextBox.xaml
+++ b/Utils.Net/Controls/Styles/TextBox.xaml
@@ -31,6 +31,7 @@
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center"
                                    RenderOptions.BitmapScalingMode="Fant"
+                                   Height="{Binding ActualHeight, ElementName=hint}"
                                    Source="{TemplateBinding IconSource}"/>
 
                             <TextBlock x:Name="hint"
@@ -52,19 +53,21 @@
                                     Grid.Column="1"
                                     ToolTip="Clear Text"
                                     Cursor="Hand"
-                                    Padding="3 8"
+                                    Padding="3"
                                     Opacity="0.7"
                                     Focusable="False"
                                     HorizontalAlignment="Right" 
-                                    VerticalAlignment="Center">
+                                    VerticalAlignment="Center"
+                                    Width="{Binding ActualHeight, ElementName=hint}"
+                                    Height="{Binding ActualHeight, ElementName=hint}">
                                 <Button.Template>
                                     <ControlTemplate TargetType="Button">
                                         <Grid Background="Transparent">
                                             <Path Margin="{TemplateBinding Padding}"
                                                   Stroke="{TemplateBinding Foreground}"
                                                   StrokeThickness="2.5"
-                                                  StrokeStartLineCap="Square"
-                                                  StrokeEndLineCap="Square"
+                                                  StrokeStartLineCap="Round"
+                                                  StrokeEndLineCap="Round"
                                                   Stretch="Uniform"
                                                   VerticalAlignment="Center"
                                                   HorizontalAlignment="Center">
