--- a/Utils.Net.Sample/Views/ListPage.xaml
+++ b/Utils.Net.Sample/Views/ListPage.xaml
@@ -41,7 +41,7 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <ListView Grid.ColumnSpan="2" Grid.Row="1" ItemsSource="{Binding ListViewItemsSource}">
+        <ListView Grid.ColumnSpan="2" Grid.Row="1" Margin="5 0 5 5" ItemsSource="{Binding ListViewItemsSource}">
             <i:Interaction.Behaviors>
                 <i:GridViewResizeBehavior/>
                 <i:GridViewSortBehavior/>
