--- a/Utils.Net/Dialogs/SimpleInputDialog.xaml
+++ b/Utils.Net/Dialogs/SimpleInputDialog.xaml
@@ -13,7 +13,7 @@
 
         <TextBlock Grid.Row="0" x:Name="MessageTextBlock" Margin="15 10 15 0" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"/>
 
-        <TextBox Grid.Row="1" x:Name="InputTextBox" Margin="15 10"/>
+        <TextBox Grid.Row="1" x:Name="InputTextBox" Margin="15 10" Padding="3"/>
 
         <Grid Grid.Row="2" Background="#10000000">
             <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="15 10">
