--- a/Utils.Net/Styles/ButtonStyles.xaml
+++ b/Utils.Net/Styles/ButtonStyles.xaml
@@ -15,7 +15,8 @@
                     <Border x:Name="border"
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}" 
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Padding="{TemplateBinding Padding}">
                         <Image Source="{TemplateBinding Content, Converter={StaticResource StringToUriConverter}}" />
                     </Border>
                     <ControlTemplate.Triggers>
