--- a/Utils.Net.Sample/App.xaml
+++ b/Utils.Net.Sample/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:Utils.Net.Sample"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Utils.Net;component/Styles/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+        
     </Application.Resources>
 </Application>
