--- a/Utils.Net/Dialogs/SimpleInputDialog.xaml
+++ b/Utils.Net/Dialogs/SimpleInputDialog.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ctrls="clr-namespace:Utils.Net.Controls"
              mc:Ignorable="d" d:DesignWidth="220">
     <Grid>
         <Grid.RowDefinitions>
@@ -17,8 +18,8 @@
 
         <Grid Grid.Row="2" Background="#10000000">
             <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="15 10">
-                <Button Content="OK" Margin="10 0" Padding="15 3" IsDefault="True" Click="OKButton_Click"/>
-                <Button Content="Cancel" Padding="15 3" Click="CancelButton_Click"/>
+                <ctrls:Button Content="OK" Margin="10 0" Padding="15 3" IsDefault="True" Click="OKButton_Click"/>
+                <ctrls:Button Content="Cancel" Padding="15 3" Click="CancelButton_Click"/>
             </StackPanel>
         </Grid>
     </Grid>
