--- a/Utils.Net/Themes/Generic.xaml
+++ b/Utils.Net/Themes/Generic.xaml
@@ -5,5 +5,6 @@
         <ResourceDictionary Source="/Utils.Net;component/Controls/Styles/TextBox.xaml" />
         <ResourceDictionary Source="/Utils.Net;component/Controls/Styles/NumericBox.xaml"/>
         <ResourceDictionary Source="/Utils.Net;component/Controls/Styles/ToolTip.xaml"/>
+        <ResourceDictionary Source="/Utils.Net;component/Controls/Styles/ComboBox.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
