Utils.Net.Sample * Transform ComboBox to the custom one * Show new functionality of the custom ComboBox - Icon, Hint and filtering. * Use the new GridViewItemStyle

--- a/Utils.Net.Sample/MainWindow.xaml
+++ b/Utils.Net.Sample/MainWindow.xaml
@@ -20,7 +20,7 @@
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
             <ctrls:Button Content="Back" Padding="5 0" Command="{Binding BackwardCommand}"/>
-            <ComboBox ItemsSource="{Binding Controls}" SelectedItem="{Binding SelectedControl}" MinWidth="100" Margin="5 0"/>
+            <ctrls:ComboBox ItemsSource="{Binding Controls}" SelectedItem="{Binding SelectedControl}" MinWidth="100" Margin="5 0"/>
             <ctrls:Button Content="Next" Padding="5 0" Command="{Binding ForwardCommand}"/>
         </StackPanel>
 
