--- a/Utils.Net.Sample/Views/ListPage.xaml
+++ b/Utils.Net.Sample/Views/ListPage.xaml
@@ -35,16 +35,18 @@
             </ctrls:TextBox.ToolTip>
         </ctrls:TextBox>
 
-        <ComboBox Grid.Column="1" Grid.Row="0" Margin="5" IsEditable="True"
-                  ItemsSource="{Binding CheckFilter}" Text="{Binding CheckFilterString, Mode=OneWay}">
+        <ctrls:ComboBox Grid.Column="1" Grid.Row="0" Margin="5" IsEditable="True"
+                        ItemsSource="{Binding CheckFilter}" Filter="{Binding CheckFilterFilter}" Hint="{Binding CheckFilterHint}"
+                        IconSource="http://www.dropitproject.com/categories/Eightyshades/Eightyshades12.png">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <CheckBox Content="{Binding Name}" IsChecked="{Binding IsChecked}"/>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
-        </ComboBox>
+        </ctrls:ComboBox>
 
-        <ListView Grid.ColumnSpan="2" Grid.Row="1" Margin="5 0 5 5" ItemsSource="{Binding ListViewItemsSource}">
+        <ListView Grid.ColumnSpan="2" Grid.Row="1" Margin="5 0 5 5" ItemsSource="{Binding ListViewItemsSource}"
+                  ItemContainerStyle="{StaticResource GridViewItemStyle}">
             <i:Interaction.Behaviors>
                 <i:GridViewResizeBehavior/>
                 <i:GridViewSortBehavior/>
