--- a/Utils.Net/Controls/Styles/ToolTip.xaml
+++ b/Utils.Net/Controls/Styles/ToolTip.xaml
@@ -35,7 +35,8 @@
                                        Margin="0 0 10 0"
                                        Width="{TemplateBinding IconWidth}"
                                        Source="{TemplateBinding IconSource}"
-                                       RenderOptions.BitmapScalingMode="Fant"/>
+                                       RenderOptions.BitmapScalingMode="Fant"
+                                       RenderOptions.EdgeMode="Aliased"/>
 
                                 <ContentPresenter x:Name="PART_ContentHost"
                                                   ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}" 
