--- a/Utils.Net.Sample/MainWindow.xaml
+++ b/Utils.Net.Sample/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ctrls="http://schemas.utils.net/controls"
+        xmlns:mgr="http://schemas.utils.net/managers"
         xmlns:local="clr-namespace:Utils.Net.Sample"
         mc:Ignorable="d"
         Title="Utils.Net.Sample" Width="800" Height="480">
@@ -18,7 +19,12 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
+        <ctrls:Button Grid.Row="0" Margin="5" Content="https://advising.wisc.edu/sites/default/files/Info-Icon.png"
+                      Width="24" HorizontalAlignment="Left" Style="{StaticResource ImageButtonStyle}" ToolTip="Tutorial"
+                      Command="{Binding StartTutorialCommand}"/>
+
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5" HorizontalAlignment="Right"
+                    mgr:TutorialManager.ItemId="Navigation">
             <ctrls:Button Content="Back" Padding="5 0" Command="{Binding BackwardCommand}"/>
             <ctrls:ComboBox ItemsSource="{Binding Controls}" SelectedItem="{Binding SelectedControl}" MinWidth="100" Margin="5 0"/>
             <ctrls:Button Content="Next" Padding="5 0" Command="{Binding ForwardCommand}"/>
