--- a/Utils.Net.Sample/Views/ExplorerPage.xaml
+++ b/Utils.Net.Sample/Views/ExplorerPage.xaml
@@ -6,6 +6,7 @@
              xmlns:vm="clr-namespace:Utils.Net.Sample.ViewModels"
              xmlns:ctrls="http://schemas.utils.net/controls"
              xmlns:i="http://schemas.utils.net/interactivity"
+             xmlns:mgr="http://schemas.utils.net/managers"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -20,7 +21,7 @@
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
-        <TreeView Grid.Column="0" Margin="5 5 0 5" ItemsSource="{Binding TreeRootItem.Children}">
+        <TreeView Grid.Column="0" Margin="5 5 0 5" ItemsSource="{Binding TreeRootItem.Children}" mgr:TutorialManager.ItemId="TreeView">
             <i:Interaction.Behaviors>
                 <i:TreeViewExtensionBehavior SelectedItem="{Binding SelectedLabel, UpdateSourceTrigger=PropertyChanged}"
                                              IsDeselectEnable="True"/>
@@ -55,7 +56,7 @@
 
         <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="3" ShowsPreview="True" Margin="1 5 1 5" Background="LightGray"/>
 
-        <ListView Grid.Column="2" Margin="0 5 5 5" ItemsSource="{Binding ListViewItemsSource}"
+        <ListView Grid.Column="2" Margin="0 5 5 5" ItemsSource="{Binding ListViewItemsSource}" mgr:TutorialManager.ItemId="ListView"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   SelectedItem="{Binding SelectedItem}">
             <i:Interaction.Behaviors>
@@ -77,7 +78,7 @@
                             </StackPanel>
                         </StackPanel.ToolTip>
                         <Image Source="http://files.softicons.com/download/holidays-icons/halloween-icons-by-arrioch/png/128/devil.png" 
-                               Height="128" RenderOptions.BitmapScalingMode="HighQuality" RenderOptions.EdgeMode="Aliased"/>
+                               Height="128" RenderOptions.BitmapScalingMode="Fant" RenderOptions.EdgeMode="Aliased"/>
                         <TextBlock Text="{Binding Name}" TextAlignment="Center" TextWrapping="WrapWithOverflow"/>
                     </StackPanel>
                 </DataTemplate>
