--- a/Utils.Net.Sample/Views/ListPage.xaml
+++ b/Utils.Net.Sample/Views/ListPage.xaml
@@ -6,6 +6,7 @@
              xmlns:vm="clr-namespace:Utils.Net.Sample.ViewModels"
              xmlns:ctrls="http://schemas.utils.net/controls"
              xmlns:i="http://schemas.utils.net/interactivity"
+             xmlns:mgr="http://schemas.utils.net/managers"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
@@ -23,7 +24,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <ctrls:TextBox Grid.Column="0" Grid.Row="0" Margin="5" Hint="Search" ShowClearButton="True"
+        <ctrls:TextBox Grid.Column="0" Grid.Row="0" Margin="5" Hint="Search" ShowClearButton="True" mgr:TutorialManager.ItemId="TextBox"
                        IconSource="http://www.free-icons-download.net/images/search-icon-23710.png"
                        Text="{Binding TextFilter, UpdateSourceTrigger=PropertyChanged, Delay=300}">
             <i:Interaction.Behaviors>
@@ -35,7 +36,7 @@
             </ctrls:TextBox.ToolTip>
         </ctrls:TextBox>
 
-        <ctrls:ComboBox Grid.Column="1" Grid.Row="0" Margin="5" IsEditable="True"
+        <ctrls:ComboBox Grid.Column="1" Grid.Row="0" Margin="5" IsEditable="True" mgr:TutorialManager.ItemId="ComboBox"
                         ItemsSource="{Binding CheckFilter}" Filter="{Binding CheckFilterFilter}" Hint="{Binding CheckFilterHint}"
                         IconSource="http://www.dropitproject.com/categories/Eightyshades/Eightyshades12.png">
             <ComboBox.ItemTemplate>
@@ -45,8 +46,8 @@
             </ComboBox.ItemTemplate>
         </ctrls:ComboBox>
 
-        <ListView Grid.ColumnSpan="2" Grid.Row="1" Margin="5 0 5 5" ItemsSource="{Binding ListViewItemsSource}"
-                  ItemContainerStyle="{StaticResource GridViewItemStyle}">
+        <ListView Grid.ColumnSpan="2" Grid.Row="1" Margin="5 0 5 5" mgr:TutorialManager.ItemId="GridView"
+                  ItemsSource="{Binding ListViewItemsSource}" ItemContainerStyle="{StaticResource GridViewItemStyle}">
             <i:Interaction.Behaviors>
                 <i:GridViewResizeBehavior/>
                 <i:GridViewSortBehavior/>
